# expense-tracker

./: .gitignore  README.md  run_go.sh  run_rs.sh
go_backend/: go.mod  main.go
go_backend/connect/: connect.go  expense.go  login.go  register.go
go_backend/connect/expense_manager/: expense_manager.go
go_backend/connect/map_manager/: map_manager.go
react_frontend/: package-lock.json  package.json  vite.config.js
react_frontend/src/: App.css  App.jsx  Nav.css  Nav.jsx  const.js  index.css
react_frontend/src/expenses/: AddExpense.jsx  ExpNav.jsx  ExpenseSheet.jsx  Expenses.css  Expenses.jsx  Owed.jsx  Pending.jsx
react_frontend/src/login/: Login.jsx  Logout.jsx
react_frontend/src/register/: Register.jsx
rs_backend/: Cargo.toml
rs_backend/secret/: secret_key
rs_backend/src/: connect.rs  main.rs  web_error.rs
rs_backend/src/connect/: expense.rs  login.rs  register.rs
